--- a/.github/workflows/make_changelogs.yml
+++ b/.github/workflows/make_changelogs.yml
@@ -6,14 +6,14 @@ permissions:
 on:
   push:
     branches:
-    - dev
+    - master
 
 jobs:
   MakeCL:
     permissions:
       contents: write # required to push the changelog chunk yml commit
     runs-on: ubuntu-latest
-    if: github.repository == 'Baystation12/Baystation12' # to prevent this running on forks
+    if: github.repository == 'Algol13/algolstation' # to prevent this running on forks
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
